src/scss/components/content/_unit.scss
.node--type-unit {
  .unit__title {
    margin-bottom: $spacing-and-half;
  }

  .unit__short-desc {
    @include font-size(24px, 32px);
    padding-bottom: $spacing-half;
    position: relative;
  }

  .unit__divider {
    background-color: $color-black;
    display: block;
    height: 2px;
    margin-bottom: $spacing-triple;
    margin-top: $spacing-double;
    width: $spacing-quadruple;
  }

  .unit__long-desc {
    @include font-size(20px, 32px);

    p:first-child {
      margin-top: 0;
    }
  }

  .unit__image {
    line-height: 0;
    margin-bottom: $spacing-quadruple;
    max-width: 690px;

    img {
      max-width: 100%;
    }
  }

  .unit-header__container {
    @include breakpoint($breakpoint-m) {
      display: flex;
      flex-wrap: wrap;
    }

    .unit__header {
      @include breakpoint($breakpoint-m) {
        padding-right: $spacing-double;
        width: 70%;
      }

      @include breakpoint($breakpoint-xl) {
        padding-right: $spacing-triple;
      }
    }
    .unit__contact {
      @include breakpoint($breakpoint-m) {
        width: 30%;
      }

      @include breakpoint($breakpoint-l) {
        padding-left: $spacing-double;
      }

      @include breakpoint($breakpoint-xl) {
        padding-left: $spacing-triple;
      }

      .unit__contact__title {
        @include breakpoint($breakpoint-m) {
          margin-top: $spacing-double;
        }
      }
    }
  }
}

.node--type-unit--with-hero {
  .unit__title {
    margin-top: $spacing-double;
  }

  .container {
    padding-top: 0;
  }
}

.unit__contact {
  .unit__contact__title {
    border-bottom: 2px solid $color-black;
    margin-bottom: $spacing-and-half;
    padding-bottom: $spacing;
  }

  .unit__contact-row {
    border-bottom: 1px solid $color-black-20;
    margin-bottom: $spacing;
    padding-bottom: $spacing;
    padding-left: $spacing-double;

    &:last-of-type {
      border-bottom: 0 none;
      margin-bottom: 0;
      padding-bottom: 0;
    }

    .unit__contact-row__label {
      align-items: flex-start;
      display: flex;
      font-weight: 600;
      margin-bottom: 8px;

      .icon {
        margin-left: -$spacing-double;
        margin-right: $spacing-half;
      }
    }

    p:first-of-type {
      margin-top: 0;
    }
  }
}

.unit__services {
  background-color: $color-black-5;
  margin-top: $spacing-double;
  overflow: hidden;
  padding-bottom: $spacing-and-half;

  .node--type-service--teaser {
    margin-top: $spacing-and-half;
  }

  .unit__services__header {
    align-items: flex-end;
    display: flex;
    justify-content: space-between;
  }

  .unit__services__count-container {
    @include font-size(18px, 32px);
    margin-left: $spacing-and-half;
    white-space: nowrap;

    .unit__services__count {
      font-weight: 700;
    }
  }

  .unit__services__content {
    display: flex;
    flex-wrap: wrap;

    @include breakpoint($breakpoint-s) {
      margin-right: -$spacing-and-half;
    }

    .node--type-service--teaser {
      width: 100%;

      @include breakpoint($breakpoint-s) {
        margin-right: $spacing-and-half;
        width: calc(50% - #{$spacing-and-half});
      }

      @include breakpoint($breakpoint-l) {
        width: calc(25% - #{$spacing-and-half});
      }

      // If there is 1 or 2 items inside the services listing:
      @include content_count(1, 2) {
        @include breakpoint($breakpoint-l) {
          width: calc(50% - #{$spacing-and-half});
        }
      }

      // If there 3 items inside the services listing:
      @include content_count(3) {
        @include breakpoint($breakpoint-l) {
          width: calc(33.33% - #{$spacing-and-half});
        }
      }
    }
  }
  .unit__services__pager {
    list-style: none;
    margin: $spacing-quadruple 0 0;
    padding: 0;
  }

  .unit__services__load-more-container {
    display: flex;
    justify-content: center;
    width: 100%;

    .hds-button {
      --background-color: transparent;
      --background-color-hover: var(--color-black-10);
      --background-color-focus: transparent;
      --background-color-hover-focus: var(--color-black-10);
      --background-color-disabled: transparent;
      --border-color: var(--hdbt-color-black);
      --border-color-hover: var(--hdbt-color-black);
      --border-color-focus: var(--hdbt-color-black);
      --border-color-hover-focus: var(--hdbt-color-black);
      --border-color-disabled: var(--hdbt-color-black);
      --color: var(--hdbt-color-black);
      --color-hover: var(--hdbt-color-black);
      --color-focus: var(--hdbt-color-black);
      --color-hover-focus: var(--hdbt-color-black);
      --focus-outline-color: var(--hdbt-color-black);
    }
  }
}

.node--type-unit.node--view-mode-full {
  .unit__services:last-child {
    // Make the keywords element go "under" the footer.
    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
    padding-bottom: $spacing-double + $footer-koro-height;

    @include breakpoint($breakpoint-l) {
      padding-bottom: $spacing-quadruple + $footer-koro-height;
    }
  }
}

.node--type-unit--teaser {
  align-items: flex-start;
  background-color: $color-white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: $spacing-and-half;
  padding: $spacing-and-half;
  width: 100%;

  @include breakpoint($breakpoint-m) {
    align-items: stretch;
    flex-direction: row;
    justify-content: flex-end;
    margin-bottom: $spacing-half;
  }

  .unit__title {
    @include font-size(24px, 29px);
    font-weight: 500;
    margin-bottom: $spacing-and-half;
    margin-top: 0;
    padding-right: $spacing-and-half;

    @include breakpoint($breakpoint-m) {
      width: 30%;
    }
  }

  .unit__info {
    @include breakpoint($breakpoint-m) {
      width: 60%;
    }
  }

  .unit__info-row {
    display: flex;
    margin-bottom: $spacing-and-half;

    @include breakpoint($breakpoint-m) {
      margin-bottom: $spacing;
    }

    &:last-child {
      margin-bottom: 0;
    }

    .icon {
      margin-right: $spacing-half;
    }
  }

  .unit__info-row--address .address {
    margin-top: 0;
  }

  .unit__link {
    line-height: 0;
    margin-top: 32px;

    @include breakpoint($breakpoint-m) {
      align-items: flex-end;
      display: flex;
      justify-content: flex-end;
      margin-top: 0;
      width: 10%;
    }

    .icon {
      --icon-proportions: 48px;
    }
  }
}

